Internal Services Refactor (#3756)
* Reduce circular dependencies in spring beans context

* SecurityService minor refactor to reduce dependencies

* Reduce circular dependencies in spring beans context

* Remove v1 Content Repository

* Implement missing operations in v2 content repository

* Prevent loading+writing when reverting content. Let git handle the copy into the working directory

* Code cleanup and unnecessary dependencies removal

* Git repository getOperationsFromDelta() cleanup

* Code clean up and remove unused references

* Remove cleanup for (bare) published repo

* PublishCapableRepository tweaks

* Code cleanup

* Remove commented out code

* Replace GitContentRepository reference when git awareness is not needed

* Remove unused code. Cleanup

* Remove obsolete/unused classes

* Refactor ServiceInternal interfaces

* Reduce bean dependencies

* Code cleanup

* Remove obsolete change-content-type API

* Refactor duplicate site to reduce circular dependencies

* Code tweaks and cleanup

* Code cleanup

* Remove old unused V1 API endpoints

* Permissions fixes. Added missing bean reference

* Remove obsolete get-canned-message API. Cleanup