@@ -30,50 +30,50 @@ import org.craftercms.studio.api.v2.dal.AuditLogParameter;
 import org.craftercms.studio.api.v2.dal.Group;
 import org.craftercms.studio.api.v2.dal.User;
 import org.craftercms.studio.api.v2.exception.OrganizationNotFoundException;
-import org.craftercms.studio.api.v2.service.audit.internal.AuditServiceInternal;
+import org.craftercms.studio.api.v2.service.audit.AuditService;
 import org.craftercms.studio.api.v2.service.security.GroupService;
-import org.craftercms.studio.api.v2.service.security.internal.GroupServiceInternal;
+import org.craftercms.studio.api.v2.service.security.UserService;
 import org.craftercms.studio.api.v2.service.security.internal.OrganizationServiceInternal;
-import org.craftercms.studio.api.v2.service.security.internal.UserServiceInternal;
 import org.craftercms.studio.api.v2.utils.StudioConfiguration;
 import org.craftercms.studio.model.rest.UserResponse;
 
 import java.beans.ConstructorProperties;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
 import static org.craftercms.studio.api.v1.constant.StudioConstants.REMOVE_SYSTEM_ADMIN_MEMBER_LOCK;
 import static org.craftercms.studio.api.v1.constant.StudioConstants.SYSTEM_ADMIN_GROUP;
+import static org.craftercms.studio.api.v2.dal.AuditLog.createAuditLogEntry;
 import static org.craftercms.studio.api.v2.dal.AuditLogConstants.*;
 import static org.craftercms.studio.api.v2.utils.StudioConfiguration.CONFIGURATION_GLOBAL_SYSTEM_SITE;
+import static org.craftercms.studio.impl.v2.utils.security.SecurityUtils.getCurrentUsername;
 import static org.craftercms.studio.permissions.StudioPermissionsConstants.*;
 
 public class GroupServiceImpl implements GroupService {
 
-	private final GroupServiceInternal groupServiceInternal;
+	private final GroupService groupServiceInternal;
 	private final OrganizationServiceInternal organizationServiceInternal;
-	private final UserServiceInternal userServiceInternal;
+	private final UserService userService;
 	private final GeneralLockService generalLockService;
 	private final StudioConfiguration studioConfiguration;
-	private final AuditServiceInternal auditServiceInternal;
+	private final AuditService auditService;
 	private final SiteService siteService;
 
 	@ConstructorProperties({"groupServiceInternal", "organizationServiceInternal",
-		"userServiceInternal", "generalLockService",
-		"studioConfiguration", "auditServiceInternal",
+		"userService", "generalLockService",
+		"studioConfiguration", "auditService",
 		"siteService"})
-	public GroupServiceImpl(final GroupServiceInternal groupServiceInternal, final OrganizationServiceInternal organizationServiceInternal,
-				final UserServiceInternal userServiceInternal, final GeneralLockService generalLockService,
-				final StudioConfiguration studioConfiguration, final AuditServiceInternal auditServiceInternal,
+	public GroupServiceImpl(final GroupService groupServiceInternal, final OrganizationServiceInternal organizationServiceInternal,
+				final UserService userService, final GeneralLockService generalLockService,
+				final StudioConfiguration studioConfiguration, final AuditService auditService,
 				final SiteService siteService) {
 		this.groupServiceInternal = groupServiceInternal;
 		this.organizationServiceInternal = organizationServiceInternal;
-		this.userServiceInternal = userServiceInternal;
+		this.userService = userService;
 		this.generalLockService = generalLockService;
 		this.studioConfiguration = studioConfiguration;
-		this.auditServiceInternal = auditServiceInternal;
+		this.auditService = auditService;
 		this.siteService = siteService;
 	}
 
@@ -104,17 +104,17 @@ public class GroupServiceImpl implements GroupService {
 	@HasPermission(type = DefaultPermission.class, action = PERMISSION_CREATE_GROUPS)
 	public Group createGroup(long orgId, String groupName,
 				 String groupDescription, boolean externallyManaged)
-		throws GroupAlreadyExistsException, ServiceLayerException, AuthenticationException {
+		throws GroupAlreadyExistsException, ServiceLayerException {
 		Group toRet = groupServiceInternal.createGroup(orgId, groupName, groupDescription, externallyManaged);
 		SiteFeed siteFeed = siteService.getSite(studioConfiguration.getProperty(CONFIGURATION_GLOBAL_SYSTEM_SITE));
-		AuditLog auditLog = auditServiceInternal.createAuditLogEntry();
+		AuditLog auditLog = createAuditLogEntry();
 		auditLog.setOperation(OPERATION_CREATE);
 		auditLog.setSiteId(siteFeed.getId());
-		auditLog.setActorId(userServiceInternal.getCurrentUser().getUsername());
+		auditLog.setActorId(getCurrentUsername());
 		auditLog.setPrimaryTargetId(groupName);
 		auditLog.setPrimaryTargetType(TARGET_TYPE_GROUP);
 		auditLog.setPrimaryTargetValue(groupName);
-		auditServiceInternal.insertAuditLog(auditLog);
+		auditService.insertAuditLog(auditLog);
 
 		return toRet;
 	}
@@ -123,18 +123,18 @@ public class GroupServiceImpl implements GroupService {
 	@HasPermission(type = DefaultPermission.class, action = PERMISSION_UPDATE_GROUPS)
 	public Group updateGroup(long orgId, Group group)
 		throws ServiceLayerException, GroupNotFoundException, AuthenticationException, GroupExternallyManagedException {
-		checkExternallyManagedGroup(Arrays.asList(group.getId()));
+		checkExternallyManagedGroup(List.of(group.getId()));
 
 		Group toRet = groupServiceInternal.updateGroup(orgId, group);
 		SiteFeed siteFeed = siteService.getSite(studioConfiguration.getProperty(CONFIGURATION_GLOBAL_SYSTEM_SITE));
-		AuditLog auditLog = auditServiceInternal.createAuditLogEntry();
+		AuditLog auditLog = createAuditLogEntry();
 		auditLog.setOperation(OPERATION_UPDATE);
 		auditLog.setSiteId(siteFeed.getId());
-		auditLog.setActorId(userServiceInternal.getCurrentUser().getUsername());
+		auditLog.setActorId(getCurrentUsername());
 		auditLog.setPrimaryTargetId(toRet.getGroupName());
 		auditLog.setPrimaryTargetType(TARGET_TYPE_GROUP);
 		auditLog.setPrimaryTargetValue(toRet.getGroupName());
-		auditServiceInternal.insertAuditLog(auditLog);
+		auditService.insertAuditLog(auditLog);
 		return toRet;
 	}
 
@@ -160,9 +160,9 @@ public class GroupServiceImpl implements GroupService {
 		List<Group> groups = groupServiceInternal.getGroups(groupIds);
 		groupServiceInternal.deleteGroup(groupIds);
 		SiteFeed siteFeed = siteService.getSite(studioConfiguration.getProperty(CONFIGURATION_GLOBAL_SYSTEM_SITE));
-		AuditLog auditLog = auditServiceInternal.createAuditLogEntry();
+		AuditLog auditLog = createAuditLogEntry();
 		auditLog.setOperation(OPERATION_DELETE);
-		auditLog.setActorId(userServiceInternal.getCurrentUser().getUsername());
+		auditLog.setActorId(getCurrentUsername());
 		auditLog.setSiteId(siteFeed.getId());
 		auditLog.setPrimaryTargetId(studioConfiguration.getProperty(CONFIGURATION_GLOBAL_SYSTEM_SITE));
 		auditLog.setPrimaryTargetType(TARGET_TYPE_GROUP);
@@ -176,7 +176,7 @@ public class GroupServiceImpl implements GroupService {
 			parameters.add(parameter);
 		}
 		auditLog.setParameters(parameters);
-		auditServiceInternal.insertAuditLog(auditLog);
+		auditService.insertAuditLog(auditLog);
 	}
 
 	@Override
@@ -193,10 +193,9 @@ public class GroupServiceImpl implements GroupService {
 
 	@Override
 	@HasPermission(type = DefaultPermission.class, action = PERMISSION_READ_GROUPS)
-	public List<UserResponse> getGroupMembers(long groupId, int offset, int limit, String sort)
+	public List<User> getGroupMembers(long groupId, int offset, int limit, String sort)
 		throws ServiceLayerException, GroupNotFoundException {
-		List<User> users = groupServiceInternal.getGroupMembers(groupId, offset, limit, sort);
-		return users.stream().map(user -> new UserResponse(user)).collect(Collectors.toList());
+		return groupServiceInternal.getGroupMembers(groupId, offset, limit, sort);
 	}
 
 	@Override
@@ -207,12 +206,12 @@ public class GroupServiceImpl implements GroupService {
 
 	@Override
 	@HasPermission(type = DefaultPermission.class, action = PERMISSION_UPDATE_GROUPS)
-	public List<UserResponse> addGroupMembers(long groupId, List<Long> userIds, List<String> usernames, boolean externallyManaged)
+	public List<User> addGroupMembers(long groupId, List<Long> userIds, List<String> usernames, boolean externallyManaged)
 		throws ServiceLayerException, UserNotFoundException, GroupNotFoundException, AuthenticationException {
 		List<User> users = groupServiceInternal.addGroupMembers(groupId, userIds, usernames, externallyManaged);
 		Group group = groupServiceInternal.getGroup(groupId);
 		SiteFeed siteFeed = siteService.getSite(studioConfiguration.getProperty(CONFIGURATION_GLOBAL_SYSTEM_SITE));
-		AuditLog auditLog = auditServiceInternal.createAuditLogEntry();
+		AuditLog auditLog = createAuditLogEntry();
 		List<AuditLogParameter> parameters = new ArrayList<>();
 		for (User user : users) {
 			AuditLogParameter parameter = new AuditLogParameter();
@@ -224,12 +223,12 @@ public class GroupServiceImpl implements GroupService {
 		auditLog.setParameters(parameters);
 		auditLog.setOperation(OPERATION_ADD_MEMBERS);
 		auditLog.setSiteId(siteFeed.getId());
-		auditLog.setActorId(userServiceInternal.getCurrentUser().getUsername());
+		auditLog.setActorId(getCurrentUsername());
 		auditLog.setPrimaryTargetId(Long.toString(groupId));
 		auditLog.setPrimaryTargetType(TARGET_TYPE_GROUP);
 		auditLog.setPrimaryTargetValue(group.getGroupName());
-		auditServiceInternal.insertAuditLog(auditLog);
-		return users.stream().map(user -> new UserResponse(user)).collect(Collectors.toList());
+		auditService.insertAuditLog(auditLog);
+		return users.stream().map(UserResponse::new).collect(Collectors.toList());
 	}
 
 	@Override
@@ -240,9 +239,9 @@ public class GroupServiceImpl implements GroupService {
 		generalLockService.lock(REMOVE_SYSTEM_ADMIN_MEMBER_LOCK);
 		try {
 			if (group.getGroupName().equals(SYSTEM_ADMIN_GROUP)) {
-				List<UserResponse> members = getGroupMembers(groupId, 0, Integer.MAX_VALUE, StringUtils.EMPTY);
+				List<User> members = getGroupMembers(groupId, 0, Integer.MAX_VALUE, StringUtils.EMPTY);
 				if (CollectionUtils.isNotEmpty(members)) {
-					List<UserResponse> membersAfterRemove = new ArrayList<>(members);
+					List<User> membersAfterRemove = new ArrayList<>(members);
 					members.forEach(m -> {
 						if (CollectionUtils.isNotEmpty(userIds)) {
 							if (userIds.contains(m.getId())) {
@@ -261,13 +260,13 @@ public class GroupServiceImpl implements GroupService {
 					}
 				}
 			}
-			List<User> users = userServiceInternal.getUsersByIdOrUsername(userIds, usernames);
+			List<User> users = userService.getUsersByIdOrUsername(userIds, usernames);
 
 			groupServiceInternal.removeGroupMembers(groupId, userIds, usernames);
 			SiteFeed siteFeed = siteService.getSite(studioConfiguration.getProperty(CONFIGURATION_GLOBAL_SYSTEM_SITE));
-			AuditLog auditLog = auditServiceInternal.createAuditLogEntry();
+			AuditLog auditLog = createAuditLogEntry();
 			auditLog.setOperation(OPERATION_REMOVE_MEMBERS);
-			auditLog.setActorId(userServiceInternal.getCurrentUser().getUsername());
+			auditLog.setActorId(getCurrentUsername());
 			auditLog.setSiteId(siteFeed.getId());
 			auditLog.setPrimaryTargetId(Long.toString(group.getId()));
 			auditLog.setPrimaryTargetType(TARGET_TYPE_GROUP);
@@ -281,10 +280,22 @@ public class GroupServiceImpl implements GroupService {
 				parameters.add(parameter);
 			}
 			auditLog.setParameters(parameters);
-			auditServiceInternal.insertAuditLog(auditLog);
+			auditService.insertAuditLog(auditLog);
 		} finally {
 			generalLockService.unlock(REMOVE_SYSTEM_ADMIN_MEMBER_LOCK);
 		}
+	}
+
+	@Override
+	@HasPermission(type = DefaultPermission.class, action = PERMISSION_READ_GROUPS)
+	public List<Group> getGroups(List<Long> groupIds) throws GroupNotFoundException, ServiceLayerException {
+		return groupServiceInternal.getGroups(groupIds);
+	}
+
+	@Override
+	@HasPermission(type = DefaultPermission.class, action = PERMISSION_READ_GROUPS)
+	public boolean groupExists(long groupId, String groupName) throws ServiceLayerException {
+		return groupServiceInternal.groupExists(groupId, groupName);
 	}
 
 	/**
@@ -292,13 +303,13 @@ public class GroupServiceImpl implements GroupService {
 	 * If matched, the operation must not be permitted.
 	 *
 	 * @param groupIds list of group IDs
-	 * @throws ServiceLayerException
-	 * @throws GroupNotFoundException
-	 * @throws GroupExternallyManagedException
+	 * @throws ServiceLayerException if any error occurs while retrieving the groups
+	 * @throws GroupNotFoundException if any of the groups is not found
+	 * @throws GroupExternallyManagedException if any of the groups is externally managed
 	 */
 	private void checkExternallyManagedGroup(List<Long> groupIds) throws ServiceLayerException, GroupNotFoundException, GroupExternallyManagedException {
 		List<Group> groups = groupServiceInternal.getGroups(groupIds);
-		if (groups.stream().anyMatch(group -> group.isExternallyManaged())) {
+		if (groups.stream().anyMatch(Group::isExternallyManaged)) {
 			throw new GroupExternallyManagedException("Cannot update externally managed groups.");
 		}
 	}
